# h1b-labor-map

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.yaml  labor_market_h1b_map_blueprint.md  pyproject.toml  run.py  user_profile.yaml
data/manifest/: corporate_groups.yaml  employer_matches.csv  employer_matches_review.csv  geo_review.csv  inspection.txt  inspection2.txt  phase0_findings.md  sources.json
data/manifest/dol_column_mappers/: fy2022.json  fy2023.json  fy2024.json  fy2025.json
data/marts/: personalized_employer_list.html  report.html
scripts/: discover_urls.py  inspect_top.py  inspect_views.py  probe_real_urls.py  probe_urls.py  scrape_uscis_hub.py
src/: __init__.py  cap_exempt.py  common.py  entity_resolve.py  geo_normalize.py  ingest_bls.py  ingest_census.py  ingest_dol.py  ingest_edgar.py  ingest_ipeds.py  ingest_irs.py  ingest_uscis.py  ingest_warn.py  join.py  personalized_list.py  report.py  scoring.py  views.py
tests/: conftest.py  test_common.py  test_entity_resolve.py  test_geo_normalize.py  test_pipeline_smoke.py  test_scoring.py
