[project]
name = "h1b-labor-map"
version = "0.1.0"
description = "US labor market x H-1B sponsorship map for an OPT job-seeker"
requires-python = ">=3.11,<3.13"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.20.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "rapidfuzz>=3.10.0",
    "pandera[polars]>=0.22.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "openpyxl>=3.1.0",
    "click>=8.1.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
